handson/classifier-k8s/deployment/classifier-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: classifer-deployment
    labels:
        app: classifier
spec:
    replicas: 2
    selector:
        matchLabels:
            app: classifier
    template:
        metadata:
            labels:
                app: classifier
        spec:
            containers:
                - name: classifier
                  image: <IMAGE>
                  ports:
                      - containerPort: 7860
