handson/classifier-k8s/deployment/classifier-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: classifier-service
spec:
    selector:
        app: classifier
    type: NodePort
    ports:
        - protocol: TCP
          port: 80
          targetPort: 7860
